Update & enhance snippet test information
Update `TestInfo` property of snippets that have demo code to
`advanced`.

Add new `AdvancedTest.Level` property that provides further information
about testing of snippets which have `TestInfo=advanced`. Snippets that
have demo code were given `AdvancedTest.Level` property with value
`demo` while snippets that have unit tests were given
`AdvancedTest.Level` property with value `unit-tests`.

Add new `AdvancedTest.URL` property to all snippets with
`TestInfo=advanced` that had value containing URL of related demo or
unit test project.

--- a/collection/arrays.ini
+++ b/collection/arrays.ini
@@ -353,6 +353,8 @@ DescEx="<p>A method-only advanced record that provides utility methods for worki
 Units=Generics.Defaults
 SeeAlso=IndexOfByte,ByteArraysEqual,ByteArraysSameStart
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=623.dat
 Delphi2=N
 Delphi3=N
