--- a/collection/date.ini
+++ b/collection/date.ini
@@ -57,6 +57,8 @@ Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateMonth,DateYear,DayOfYear
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=224.dat
 Delphi2=Y
 Delphi3=Y
@@ -107,6 +109,8 @@ Units=SysUtils
 SeeAlso=DateMonth,DateMonthStart,DaysInMonth
 Depends=DaysInMonth
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=441.dat
 Delphi2=Y
 Delphi3=Y
@@ -132,6 +136,8 @@ Extra="<p>The date returned is midnight at the beginning of the first day of the
 Units="SysUtils"
 SeeAlso=DateMonth,DateMonthEnd
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=442.dat
 Delphi2=Y
 Delphi3=Y
@@ -157,6 +163,8 @@ Extra="<p>Based on code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarterStart,DateQuarterEnd
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=413.dat
 Delphi2=Y
 Delphi3=Y
@@ -182,6 +190,8 @@ Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterStart
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=414.dat
 Delphi2=N
 Delphi3=N
@@ -207,6 +217,8 @@ Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterEnd
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=415.dat
 Delphi2=N
 Delphi3=N
@@ -301,6 +313,8 @@ Extra="<p>The date returned is midnight at the beginning of the last day of the 
 Units=SysUtils
 SeeAlso=DateYear,DateYearStart
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=443.dat
 Delphi2=Y
 Delphi3=Y
@@ -326,6 +340,8 @@ Extra="<p>The date returned is midnight at the beginning of the first day of the
 Units=SysUtils
 SeeAlso=DateYear,DateYearEnd
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=444.dat
 Delphi2=Y
 Delphi3=Y
@@ -777,6 +793,8 @@ DescEx="<p>Formats a date in SQL format.</p>"
 Units=SysUtils
 SeeAlso=SQLDateToDateTime
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=237.dat
 Delphi2=Y
 Delphi3=Y
@@ -802,6 +820,8 @@ Extra="<p>Handles only the date component. Any time component is ignored.</p>"
 Units=SysUtils
 SeeAlso=SQLDate
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=412.dat
 Delphi2=Y
 Delphi3=Y
@@ -1381,6 +1401,8 @@ DescEx="<p>Returns the date of Easter Sunday for the given year in the Gregorian
 Extra="<p>This routine is derived from a snippet taken from the SWAG Archive. That snippet was converted to Pascal by Kerry Sokalsky from Modula-2 code written by Greg Vigneault in 1993.</p><p>The algorithm was taken from chapter 4 of &quot;Astronomical Formulae for Calculators&quot; 2nd edition; by Jean Meeus; publisher: Willmann-Bell Inc., ISBN 0-943396-01-8.</p><p>The algorithm is valid for all years in the Gregorian calendar, i.e. from 1583 onwards. The extreme dates of Easter are March 22 (as in 1818 and 2285) and April 25 (as in 1886, 1943, 2038).</p><p>For more details of the algorithm see <a href="http://en.wikipedia.org/wiki/Computus#Anonymous_Gregorian_algorithm">this article</a> on Wikipedia.</p>"
 Units=SysUtils
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=610.dat
 Delphi7=Y
 Delphi2005Win32=Y
