--- a/collection/hex.ini
+++ b/collection/hex.ini
@@ -12,6 +12,8 @@ Units=SysUtils
 Depends=StripHexPrefix
 SeeAlso=StripHexPrefix
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=311.dat
 Delphi2=N
 Delphi3=N
@@ -35,6 +37,8 @@ FPC=Y
 DescEx="<p>Returns a hexadecimal representation of the bytes in the given buffer which has the given size.</p>"
 SeeAlso=BytesToHex,ByteToHex,LongWordToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
+TestInfo=advanced
+AdvancedTest.Level=unit-testsgithub.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=312.dat
 Delphi2=Y
 Delphi3=Y
@@ -59,6 +63,8 @@ DescEx="<p>Returns a hexadecimal representation of the given array of bytes.</p>
 Depends=BufToHex
 SeeAlso=BufToHex,ByteToHex,LongWordToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=313.dat
 Delphi2=N
 Delphi3=N
@@ -83,6 +89,8 @@ DescEx="<p>Returns the hexadecimal representation of the given byte value.</p>"
 Units=SysUtils
 SeeAlso=BufToHex,BytesToHex,LongWordToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=314.dat
 Delphi2=Y
 Delphi3=Y
@@ -107,6 +115,8 @@ DescEx="<p>Returns the hexadecimal representation of the given long (4 byte) wor
 Units=SysUtils
 SeeAlso=BufToHex,BytesToHex,ByteToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=315.dat
 Delphi2=N
 Delphi3=N
@@ -131,6 +141,8 @@ DescEx="<p>Returns the hexadecimal representation of the given quad (8 byte) wor
 Units=SysUtils
 SeeAlso=BufToHex,BytesToHex,ByteToHex,LongWordToHex,WordToHex
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=316.dat
 Delphi2=N
 Delphi3=N
@@ -155,6 +167,8 @@ DescEx="<p>Strips any prefix from the given hexadecimal string. Both Delphi ('$'
 Units=SysUtils
 SeeAlso=AddHexPrefix
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=310.dat
 Delphi2=Y
 Delphi3=Y
@@ -180,6 +194,8 @@ Extra="<p>The hexadecimal string must contain only valid hex digits, optionally 
 Depends=AddHexPrefix
 SeeAlso=HexToInt,HexToIntDef,TryHexToBuf,TryHexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=319.dat
 Delphi2=N
 Delphi3=N
@@ -205,6 +221,8 @@ Extra="<p>The hexadecimal string must contain only valid hex digits, optionally 
 Depends=AddHexPrefix
 SeeAlso=HexToInt64,HexToInt64Def,TryHexToBuf,TryHexToInt
 TestInfo=advanced
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
+AdvancedTest.Level=unit-tests
 Snip=320.dat
 Delphi2=N
 Delphi3=N
@@ -229,6 +247,8 @@ DescEx="<p>Returns the hexadecimal representation of the given (2 byte) word val
 Units=SysUtils
 SeeAlso=BufToHex,BytesToHex,ByteToHex,LongWordToHex,QuadWordToHex
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=317.dat
 Delphi2=Y
 Delphi3=Y
@@ -254,6 +274,8 @@ Extra="<p>Assumes that <var>HexStr</var> contains only valid hex digits, optiona
 Depends=StripHexPrefix
 SeeAlso=HexToBuf
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=318.dat
 Delphi2=Y
 Delphi3=Y
@@ -279,6 +301,8 @@ Extra="<p>Use <var>HexByteSize</var> to determine the size of buffer required. T
 Depends=TryHexToBuf
 SeeAlso=TryHexToBuf,HexToBytes,HexToInt,HexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=323.dat
 Delphi2=N
 Delphi3=N
@@ -304,6 +328,8 @@ Extra="<p><var>HexStr</var> must contain only valid hex digits, optionally prefi
 Depends=TBytes,TryHexToBytes
 SeeAlso=TryHexToBytes,HexToBuf,HexToInt,HexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=324.dat
 Delphi2=N
 Delphi3=N
@@ -329,6 +355,8 @@ Extra="<p><var>HexStr</var> must contain only valid hex digits, optionally prefi
 Depends=TryHexToInt
 SeeAlso=TryHexToInt,HexToIntDef,HexToBuf,HexToBytes,HexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=325.dat
 Delphi2=N
 Delphi3=N
@@ -354,6 +382,8 @@ Extra="<p><var>HexStr</var> must contain only valid hex digits, optionally prefi
 Depends=TryHexToInt64
 SeeAlso=TryHexToInt64,HexToInt64Def,HexToBuf,HexToBytes,HexToInt
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=326.dat
 Delphi2=N
 Delphi3=N
@@ -379,6 +409,8 @@ Extra="<p><var>HexStr</var> may be prefixed by either '$' or '0x' or have no pre
 Depends=TryHexToInt64
 SeeAlso=TryHexToInt64,HexToInt64,HexToIntDef
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=328.dat
 Delphi2=N
 Delphi3=N
@@ -404,6 +436,8 @@ Extra="<p><var>HexStr</var> may be prefixed by either '$' or '0x' or have no pre
 Depends=TryHexToInt
 SeeAlso=TryHexToInt,HexToInt,HexToInt64Def
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=327.dat
 Delphi2=N
 Delphi3=N
@@ -429,6 +463,8 @@ Extra="<p>The hexadecimal string must not be empty and contain only valid hex di
 Depends=StripHexPrefix,TryHexToInt
 SeeAlso=HexToBuf,TryHexToBytes,TryHexToInt,TryHexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=321.dat
 Delphi2=N
 Delphi3=N
@@ -454,6 +490,8 @@ Extra="<p>The hexadecimal string must contain only valid hex digits, optionally 
 Depends=HexByteSize,TBytes,TryHexToBuf
 SeeAlso=HexToBytes,TryHexToBuf,TryHexToInt,TryHexToInt64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=322.dat
 Delphi2=N
 Delphi3=N
