--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -56,6 +56,8 @@ DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=DigitCount2,DigitCountR
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=202.dat
 Delphi2=N
 Delphi3=N
@@ -81,6 +83,8 @@ Extra="<p>Based on code suggested by Don Rowlett.</p>"
 Units=Math
 SeeAlso=DigitCount,DigitCountR
 TestInfo=advanced
+TestInfo=advanced
+AdvancedTest.Level=unit-testsgithub.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=204.dat
 Delphi2=N
 Delphi3=N
@@ -105,6 +109,8 @@ DescEx="<p>Counts the number of digits in the given integer using recursion.</p>
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 SeeAlso=DigitCount,DigitCount2
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=417.dat
 Delphi2=N
 Delphi3=N
@@ -434,6 +440,8 @@ FPC=Y
 DescEx="<p>Returns the sum of the digits from the given integer, using recursion.</p>"
 Extra="<p>Sums of digits of negative numbers are negative, for example <mono>DigitSum(-42)=-6</mono>.</p><p>Contributed Rubem Nascimento da Rocha.</p>"
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=418.dat
 Delphi2=N
 Delphi3=N
@@ -507,6 +515,8 @@ DescEx="<p>Determines the greatest common divisor of two given non-zero integers
 Extra="<p>Uses Euclid's method.</p><p>Note that <mono>GCD(a,b) = GCD(|a|,b) = GCD(a,|b|) = GCD(|a|,|b|)</mono>, which implies that <mono>GCD(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD2,LCD
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=201.dat
 Delphi2=Y
 Delphi3=Y
@@ -531,6 +541,8 @@ DescEx="<p>Determines the greatest common divisor of two given non-zero integers
 Extra="<p>Uses a recursive implementation of Euclid's method.</p><p>Note that <mono>GCD2(a,b) = GCD2(|a|,b) = GCD2(a,|b|) = GCD2(|a|,|b|)</mono>, which implies that <mono>GCD2(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD,LCD
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=416.dat
 Delphi2=Y
 Delphi3=Y
@@ -555,6 +567,8 @@ DescEx="<p>Checks if the given number is prime.</p>"
 Extra="<p>On versions of Delphi that support <var>Int64</var> parameters to the <var>Sqrt</var> function, the type of <var>N</var>, <var>Max</var> &amp; <var>Divisor</var> can be changed to <var>Int64</var>.</p> <p>Adapted from code contributed by Don Rowlett.</p>"
 SeeAlso=IsPrime2
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=232.dat
 Delphi2=Y
 Delphi3=Y
@@ -579,6 +593,8 @@ DescEx="<p>Checks if the given number is prime.</p>"
 Extra="<p>Uses less code than <var>IsPrime</var> and does not require any floating point operations.</p><p>Contributed by daniel.</p>"
 SeeAlso=IsPrime
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=570.dat
 Delphi6=Y
 Delphi7=Y
@@ -600,6 +616,8 @@ Extra="<p>Note that <mono>LCD(a,b) = LCD(|a|,b) = LCD(a,|b|) = LCD(|a|,|b|)</mon
 Depends=GCD
 SeeAlso=GCD,GCD2
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=467.dat
 Delphi2=Y
 Delphi3=Y
@@ -624,6 +642,8 @@ DisplayName="MaxOfArray (Double overload)"
 DescEx="<p>Returns the maximum value contained in the given array of double precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MinOfArray_Double,MaxOfArray_Extended,MaxOfArray_Int64,MaxOfArray_Integer,MaxOfArray_Single,Mid_Double,MinMidMax_Double
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=428.dat
 Delphi2=N
 Delphi3=N
@@ -648,6 +668,8 @@ DisplayName="MaxOfArray (Extended overload)"
 DescEx="<p>Returns the maximum value contained in the given array of extended precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MinOfArray_Extended,MaxOfArray_Double,MaxOfArray_Int64,MaxOfArray_Integer,MaxOfArray_Single,Mid_Extended,MinMidMax_Extended
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=429.dat
 Delphi2=N
 Delphi3=N
@@ -672,6 +694,8 @@ DisplayName="MaxOfArray (Int64 overload)"
 DescEx="<p>Returns the maximum value contained in the given array of 64 bit integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MinOfArray_Int64,MaxOfArray_Double,MaxOfArray_Extended,MaxOfArray_Integer,MaxOfArray_Single,Mid_Int64,MinMidMax_Int64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=430.dat
 Delphi2=N
 Delphi3=N
@@ -696,6 +720,8 @@ DisplayName="MaxOfArray (Integer overload)"
 DescEx="<p>Returns the maximum value contained in the given array of integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MinOfArray_Integer,MaxOfArray_Double,MaxOfArray_Extended,MaxOfArray_Int64,MaxOfArray_Single,Mid_Integer,MinMidMax_Integer
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=431.dat
 Delphi2=N
 Delphi3=N
@@ -720,6 +746,8 @@ DisplayName="MaxOfArray (Single overload)"
 DescEx="<p>Returns the maximum value contained in the given array of single precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MinOfArray_Single,MaxOfArray_Double,MaxOfArray_Extended,MaxOfArray_Int64,MaxOfArray_Integer,Mid_Single,MinMidMax_Single
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=432.dat
 Delphi2=N
 Delphi3=N
@@ -745,6 +773,8 @@ DescEx="<p>Returns the middle of three double precision floating point values.</
 Units=Math
 SeeAlso=Mid_Extended,Mid_Int64,Mid_Integer,Mid_Single,MaxOfArray_Double,MinOfArray_Double,MinMidMax_Double
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=423.dat
 Delphi2=N
 Delphi3=N
@@ -771,6 +801,8 @@ Extra="<p>Adapted from code from Bill Miller's snippets collection.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Int64,Mid_Integer,Mid_Single,MaxOfArray_Extended,MinOfArray_Extended,MinMidMax_Extended
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=424.dat
 Delphi2=N
 Delphi3=N
@@ -796,6 +828,8 @@ DescEx="<p>Returns the middle of three 64 bit integer values.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Integer,Mid_Single,MaxOfArray_Int64,MinOfArray_Int64,MinMidMax_Int64
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=425.dat
 Delphi2=N
 Delphi3=N
@@ -822,6 +856,8 @@ Extra="<p>Adapted from code from Bill Miller's snippets collection.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Int64,Mid_Single,MaxOfArray_Integer,MinOfArray_Integer,MinMidMax_Integer
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=426.dat
 Delphi2=N
 Delphi3=N
@@ -847,6 +883,8 @@ DescEx="<p>Returns the middle of three single precision floating point values.</
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Int64,Mid_Integer,MaxOfArray_Single,MinOfArray_Single,MinMidMax_Single
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=427.dat
 Delphi2=N
 Delphi3=N
@@ -991,6 +1029,8 @@ DisplayName="MinOfArray (Double overload)"
 DescEx="<p>Returns the minimum value contained in the given array of double precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Double,MinOfArray_Extended,MinOfArray_Int64,MinOfArray_Integer,MinOfArray_Single,Mid_Double,MinMidMax_Double
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=433.dat
 Delphi2=N
 Delphi3=N
@@ -1015,6 +1055,8 @@ DisplayName="MinOfArray (Extended overload)"
 DescEx="<p>Returns the minimum value contained in the given array of extended precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Extended,MinOfArray_Double,MinOfArray_Int64,MinOfArray_Integer,MinOfArray_Single,Mid_Extended,MinMidMax_Extended
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=434.dat
 Delphi2=N
 Delphi3=N
@@ -1039,6 +1081,8 @@ DisplayName="MinOfArray (Int64 overload)"
 DescEx="<p>Returns the minimum value contained in the given array of 64 bit integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Int64,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Integer,MinOfArray_Single,Mid_Int64,MinMidMax_Int64
 TestInfo=advanced
+AdvancedTest.Level=unit-testser]
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=435.dat
 Delphi2=N
 Delphi3=N
@@ -1063,6 +1107,8 @@ DisplayName="MinOfArray (Integer overload)"
 DescEx="<p>Returns the minimum value contained in the given array of integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Integer,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Int64,MinOfArray_Single,Mid_Integer,MinMidMax_Integer
 TestInfo=advanced
+AdvancedTest.Level=unit-testsfArray (Single overload)"
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=436.dat
 Delphi2=N
 Delphi3=N
@@ -1087,6 +1133,8 @@ DisplayName="MinOfArray (Single overload)"
 DescEx="<p>Returns the minimum value contained in the given array of single precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Single,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Int64,MinOfArray_Integer,Mid_Single,MinMidMax_Single
 TestInfo=advanced
+AdvancedTest.Level=unit-testsoStr,FractionToStrEx
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=437.dat
 Delphi2=N
 Delphi3=N
@@ -1156,6 +1204,8 @@ Units=Types
 Depends=ResizeRect_B
 SeeAlso=ResizeRect_B,StretchRect_A,StretchRect_B,ScaleRect,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=420.dat
 Delphi2=N
 Delphi3=N
@@ -1181,6 +1231,8 @@ DescEx="<p>Resizes rectangle <var>R</var> to the width and height given by <var>
 Units=Types
 SeeAlso=ResizeRect_A,StretchRect_A,StretchRect_B,ScaleRect,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
+AdvancedTest.Level=unit-testsmber
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=419.dat
 Delphi2=N
 Delphi3=N
@@ -1289,6 +1341,8 @@ DescEx="<p>Stretches rectangle <var>R</var> by the given scaling factors and ret
 Units=SysUtils,Types
 SeeAlso=StretchRect_B,ScaleRect,ResizeRect_A,ResizeRect_B,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
+AdvancedTest.Level=unit
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=421.dat
 Delphi2=N
 Delphi3=N
@@ -1315,6 +1369,8 @@ Units=Types
 Depends=StretchRect_A
 SeeAlso=StretchRect_A,ScaleRect,ResizeRect_A,ResizeRect_B,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=422.dat
 Delphi2=N
 Delphi3=N
