--- a/collection/registry.ini
+++ b/collection/registry.ini
@@ -8,6 +8,9 @@
 [GetRegistryString]
 DescEx="<p>Reads and returns the value named by <var>Name</var> from the registry sub-key <var>SubKey</var> in root key <var>RootKey</var>.</p><p>String, expanded string and integer value types are all handled, with integer values being converted to strings. Other values types are not supported and cause an exception to be raised.</p><p>The empty string is returned if the named value does not exist.</p>"
 Units=Windows,SysUtils,Registry
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=067.dat
 Delphi2=N
 Delphi3=N
