--- a/collection/string.ini
+++ b/collection/string.ini
@@ -929,6 +929,8 @@ Units=SysUtils
 DescEx="<p>Checks if the string <var>Value</var> contains a valid numeric value and returns True if so or False if not.</p><p>If <var>AllowFloat</var> is true then <var>Value</var> may contain a floating point number, otherwise it must be an integer. If <var>TrimWhiteSpace</var> is True any white space surrounding <var>Value</var> is trimmed before testing.</p>"
 Extra="<p>Floating point numbers can be in normal or scientific notation.</p><p>Integers can be expressed as decimal or hexadecimal numbers, with hex numbers prefixed by either <mono>'$'</mono> or <mono>'0x'</mono>.</p>"
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=132.dat
 Delphi2=N
 Delphi3=N
@@ -1094,6 +1096,8 @@ Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStrR
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=438.dat
 Delphi2=N
 Delphi3=N
@@ -1119,6 +1123,8 @@ Extra="<p>Uses recursion.</p><p>Renamed from a routine contributed by Rubem Nasc
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStr
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=439.dat
 Delphi2=N
 Delphi3=N
@@ -1166,6 +1172,8 @@ DescEx="<p>Strips all accelerator ('<mono>&amp;</mono>') characters from the giv
 Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=440.dat
 Delphi2=N
 Delphi3=N
@@ -1403,6 +1411,8 @@ Extra="<p>If <var>StrToParse</var> contains adjacent <var>Delimiter</var> charac
 Units=Classes
 SeeAlso=ExplodeStr,ParseDelims,SplitStr,SplitString
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=626.dat
 Delphi7=Y
 Delphi2005Win32=Y
@@ -1587,6 +1597,8 @@ Extra="<p>If <var>AText</var> contains adjacent <var>Delimiter</var> strings wit
 Units=SysUtils,Classes
 SeeAlso=ExplodeStr,ParseDelims,ParseStr,SplitStr
 TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
 Snip=627.dat
 Delphi7=Y
 Delphi2005Win32=Y
