--- a/collection/winsys.ini
+++ b/collection/winsys.ini
@@ -9,6 +9,9 @@
 DescEx="<p>Returns the Windows common files directory.</p>"
 Depends=GetCurrentVersionRegStr
 SeeAlso=ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder,GetDesktopFolder
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=040.dat
 Delphi2=N
 Delphi3=N
@@ -32,6 +35,9 @@ FPC=Y
 DescEx="<p>Returns the name of the host computer.</p>"
 Units=Windows
 SeeAlso=UserName
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=129.dat
 Delphi2=Y
 Delphi3=Y
@@ -55,6 +61,9 @@ FPC=Y
 DescEx="<p>Returns the string value named by <var>ValName</var> from the Windows &quot;CurrentVersion&quot; registry key.</p>"
 Units=Windows
 Depends=GetRegistryString
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=038.dat
 Delphi2=N
 Delphi3=N
@@ -78,6 +87,9 @@ FPC=Y
 DescEx="<p>Checks if the host operating system includes Windows Media Center.</p>"
 Units=Windows
 SeeAlso=IsTabletOS,IsWinNT,IsWin9x,IsWow64,IsVista,IsWindows7
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=092.dat
 Delphi2=Y
 Delphi3=Y
@@ -101,6 +113,9 @@ FPC=Y
 DescEx="<p>Checks if the host operating system is a Windows Tablet edition.</p>"
 Units=Windows
 SeeAlso=IsMediaCenterOS,IsWinNT,IsWin9x,IsWow64,IsVista,IsWindows7
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=093.dat
 Delphi2=Y
 Delphi3=Y
@@ -125,6 +140,9 @@ DescEx="<p>Checks if the host operating system is Windows Vista or later.</p>"
 Extra="<p>Works correctly even if the application has defined a Windows XP (or other) compatibility mode.</p><p>Contributed by Laurent Pierre.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsWindows7
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=151.dat
 Delphi2=Y
 Delphi3=Y
@@ -148,6 +166,9 @@ FPC=Y
 DescEx="<p>Checks if the host operating system is on the Windows 9x platform.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsWinNT,IsWow64,IsVista,IsWindows7,IsTabletOS,IsMediaCenterOS
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=091.dat
 Delphi2=Y
 Delphi3=Y
@@ -172,6 +193,9 @@ DescEx="<p>Checks if the host operating system is Windows 7 (or Windows Server 2
 Extra="<p>Works correctly even if the application has defined a Windows Vista (or other) compatibility mode.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsVista
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=292.dat
 Delphi2=Y
 Delphi3=Y
@@ -195,6 +219,9 @@ FPC=Y
 DescEx="<p>Checks if the host operating system is on the Windows NT platform.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsVista,IsWindows7,IsWin9x,IsWow64,IsTabletOS,IsMediaCenterOS
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=065.dat
 Delphi2=Y
 Delphi3=Y
@@ -218,6 +245,9 @@ FPC=Y
 DescEx="<p>Checks if the current process is executing as a 32 bit process under WOW64 on 64 bit Windows.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsWin9x,IsWinNT,IsVista,IsWindows7,IsTabletOS,IsMediaCenterOS
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=085.dat
 Delphi2=Y
 Delphi3=Y
@@ -241,6 +271,9 @@ FPC=Y
 DescEx="<p>Returns the Windows program files directory.</p>"
 Depends=GetCurrentVersionRegStr
 SeeAlso=CommonFilesFolder,SystemFolder,TempFolder,WindowsFolder,GetDesktopFolder
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=039.dat
 Delphi2=N
 Delphi3=N
@@ -286,6 +319,9 @@ FPC=Y
 DescEx="<p>Returns the Windows system directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,TempFolder,WindowsFolder,GetDesktopFolder
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=042.dat
 Delphi2=Y
 Delphi3=Y
@@ -309,6 +345,9 @@ FPC=Y
 DescEx="<p>Returns the Windows temporary directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFileName,WindowsFolder,TempFolder
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=043.dat
 Delphi2=Y
 Delphi3=Y
@@ -332,6 +371,9 @@ FPC=Y
 DescEx="<p>Returns the name of the current user.</p>"
 Units=Windows
 SeeAlso=ComputerName
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=130.dat
 Delphi2=Y
 Delphi3=Y
@@ -355,6 +397,9 @@ FPC=Y
 DescEx="<p>Returns the Windows directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=041.dat
 Delphi2=Y
 Delphi3=Y
@@ -378,6 +423,9 @@ FPC=Y
 DescEx="<p>Returns the Windows product ID.</p>"
 Units=Windows
 Depends=GetRegistryString,IsWinNT
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=071.dat
 Delphi2=N
 Delphi3=N
@@ -401,6 +449,9 @@ FPC=Y
 DescEx="<p>Checks if the program is running under Windows Terminal Server in a remote client session.</p>"
 Extra="<p><strong>Note:</strong> This function requires Windows NT4 SP4 or later. It does not work on the Windows 9x platform.</p>"
 Units=Windows
+TestInfo=advanced
+AdvancedTest.Level=demo
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-WinSys"
 Snip=302.dat
 Delphi2=Y
 Delphi3=Y
